<resources>
    <string name="app_name">WeatherForecast</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="date_picker_title">Date of crime:</string>
    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d crimes</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">%1$s!
    The crime was discovered on %2$s. %3$s, and %4$s
  </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">weatherforecast Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <!-- 天气 -->
    <string name="blizzard">blizzard</string>
    <string name="clear">clear</string>
    <string name="cloud">cloud</string>
    <string name="cloudy">cloudy</string>
    <string name="heavy_rain">heavy rain</string>
    <string name="heavy_snow">heavy snow</string>
    <string name="intense_fall">intense fall</string>
    <string name="overcast">overcast</string>
    <string name="partly_cloudy">partly cloudy</string>
    <string name="shower">shower</string>
    <string name="shower_to_clear">shower to clear</string>
</resources>
